assets/css/styles.css
/* ... */
.wobble {
    animation: wobble 2s cubic-bezier(0.11, 0, 0.5, 0) 0s infinite normal none;
}

@keyframes wobble {

    0%,
    100% {
        transform: translateX(0%);
        transform-origin: 50% 50%;
    }

    15% {
        transform: translateX(-30px) rotate(-6deg);
    }

    30% {
        transform: translateX(15px) rotate(6deg);
    }

    45% {
        transform: translateX(-15px) rotate(-3.6deg);
    }

    60% {
        transform: translateX(9px) rotate(2.4deg);
    }

    75% {
        transform: translateX(-6px) rotate(-1.2deg);
    }
}

.winner {
    animation: winner 0.5s linear 0s 1 normal none;
}

@keyframes winner {
    0% {
        opacity: 0;
        transform: rotate(-540deg) scale(0);
    }

    100% {
        opacity: 1;
        transform: rotate(0) scale(1);
    }
}

.draw {
    animation: draw 2s ease 0s 1 normal forwards;
}

@keyframes draw {

    0%,
    100% {
        transform: translateX(0%);
        transform-origin: 50% 50%;
    }

    15% {
        transform: translateX(-30px) rotate(-6deg);
    }

    30% {
        transform: translateX(15px) rotate(6deg);
    }

    45% {
        transform: translateX(-15px) rotate(-3.6deg);
    }

    60% {
        transform: translateX(9px) rotate(2.4deg);
    }

    75% {
        transform: translateX(-6px) rotate(-1.2deg);
    }
}

.invalid-animation {
    color: rgb(255,0,0);
    animation: invalid-animation 0.5s ease 0s 3 normal none;
}

@keyframes invalid-animation {
    0% {
        transform: translate(0);
    }

    10% {
        transform: translate(-2px, -2px);
    }

    20% {
        transform: translate(2px, -2px);
    }

    30% {
        transform: translate(-2px, 2px);
    }

    40% {
        transform: translate(2px, 2px);
    }

    50% {
        transform: translate(-2px, -2px);
    }

    60% {
        transform: translate(2px, -2px);
    }

    70% {
        transform: translate(-2px, 2px);
    }

    80% {
        transform: translate(-2px, -2px);
    }

    90% {
        transform: translate(2px, -2px);
    }

    100% {
        transform: translate(0);
    }
}

section {
    position: relative;
}

.game-section {
    position: relative;
    min-height: 49vh;
}

.game-notification {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 0 auto;
    border-radius: 20px;
}

.player-one-turn {
    text-decoration: underline solid rgb(255,0,0) 20%;
    animation: player-one-turn 1s linear 0s 1 normal both;
}

@keyframes player-one-turn {
    0% {
        animation-timing-function: ease-in;
        opacity: 0;
        transform: translateX(-250px);
    }

    38% {
        animation-timing-function: ease-out;
        opacity: 1;
        transform: translateX(0);
    }

    55% {
        animation-timing-function: ease-in;
        transform: translateX(-68px);
    }

    72% {
        animation-timing-function: ease-out;
        transform: translateX(0);
    }

    81% {
        animation-timing-function: ease-in;
        transform: translateX(-28px);
    }

    90% {
        animation-timing-function: ease-out;
        transform: translateX(0);
    }

    95% {
        animation-timing-function: ease-in;
        transform: translateX(-8px);
    }

    100% {
        animation-timing-function: ease-out;
        transform: translateX(0);
    }
}

.player-two-turn {
    text-decoration: underline solid rgb(255,255,0) 20%;
    animation: player-two-turn 1s linear 0s 1 normal both;
}

@keyframes player-two-turn {
    0% {
        animation-timing-function: ease-in;
        opacity: 0;
        transform: translateX(250px);
    }

    38% {
        animation-timing-function: ease-out;
        opacity: 1;
        transform: translateX(0);
    }

    55% {
        animation-timing-function: ease-in;
        transform: translateX(68px);
    }

    72% {
        animation-timing-function: ease-out;
        transform: translateX(0);
    }

    81% {
        animation-timing-function: ease-in;
        transform: translateX(28px);
    }

    90% {
        animation-timing-function: ease-out;
        transform: translateX(0);
    }

    95% {
        animation-timing-function: ease-in;
        transform: translateX(8px);
    }

    100% {
        animation-timing-function: ease-out;
        transform: translateX(0);
    }
}

/* Game board styles */

.game-board {
    position: sticky;
    top: 1em;
    width: 80vw;
    height: 80vw;
    min-width: 280px;
    min-height: 280px;
    max-width: 35rem;
    max-height: 35rem;
    overflow: hidden;
    border: 5px solid rgb(0, 0, 0);
    border-radius: 5px;
    margin: 3rem auto 25px;
}

.game-grid {
    display: grid;
    grid-gap: 5px;
    background-color: rgb(43, 46, 226);
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: repeat(7, 1fr);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 5px;
}

.game-cell {
    display: flex;
    align-items: center;
    justify-content: center;
    background: none;
    background-color: white;
    border-radius: 50%;
}

.game-cell:hover {
    cursor: pointer;
}

.game-cell-bottom {
    background-color: rgb(43, 46, 226);
}

.occupied {
    cursor: not-allowed !important;
}

/* counters */

.player-one {
    animation: place-counter 0.5s linear 0s 1 normal none;
    background-color: rgb(255,0,0);
    font-family: 'Dosis', sans-serif;
    font-size: 20px;
}

.player-two {
    animation: place-counter 0.5s linear 0s 1 normal none;
    background-color: rgb(255,255,0);
    font-family: 'Dosis', sans-serif;
    font-size: 20px;
}

@keyframes place-counter {
    0% {
        opacity: 0;
        transform: scale(0.6);
    }

    100% {
        opacity: 1;
        transform: scale(1);
    }
}

/* 404 page animation */

.player-one-404 {
    animation: place-counter-404 1.5s linear 0s 1 normal none;
    background-color: rgb(255,0,0);
    font-family: 'Dosis', sans-serif;
    font-size: 20px;
}
/* ... */

